system/networking/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: common-alb
    alb.ingress.kubernetes.io/group.order: "20"
    # Grafana 경로 기준으로 헬스체크
    alb.ingress.kubernetes.io/healthcheck-path: /grafana/
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: ipiece-monitoring-kube-prometheus-stack-grafana
                port:
                  number: 80
